get full metadata by url